# auto_control

./: .gitignore  README.md  auto_controll_server.py  calibrator.py  controll.py  keyboard_publisher.py  requirements.txt
state_space_control/: CMakeLists.txt  MICRO_ROS_SETUP.md  README.md
state_space_control/scripts/: build.sh  flash.sh  setup_pico_sdk.sh
state_space_control/src/: ert_main.c  main.c  pwm_esc.c  pwm_esc.h  quadrature_encoder.pio  rtwtypes.h  state_space_control.c  state_space_control.h
